force-app/main/default/objects/Visit/fields/Additional_Status__c.field-meta.xml
<CustomField>
    <fullName>Additional_Status__c</fullName>
    <label>Additional Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>