force-app/main/default/objects/Visit/fields/cgcloud__Account_City__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_City__c</fullName>
    <formula>Account.ShippingCity</formula>
    <label>Customer City</label>
    <type>Text</type>
</CustomField>