force-app/main/default/objects/Visit/fields/cgcloud__Account_Street__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Street__c</fullName>
    <formula>Account.ShippingStreet</formula>
    <label>Customer Street</label>
    <type>Text</type>
</CustomField>