force-app/main/default/objects/Visit/fields/cgcloud__Accountable__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accountable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system displays the Initiator of the call as the initial accountable</description>
    <label>Accountable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountableVisits</relationshipName>
    <type>Lookup</type>
</CustomField>