force-app/main/default/objects/Visit/fields/cgcloud__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>