force-app/main/default/objects/Visit/fields/cgcloud__Creation_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Creation_Date_and_Time__c</fullName>
    <label>Creation Date and Time</label>
    <type>DateTime</type>
</CustomField>