force-app/main/default/objects/Visit/fields/cgcloud__Creation_Mode__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Creation_Mode__c</fullName>
    <label>Creation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manually</fullName>
                <default>true</default>
                <label>Manually</label>
            </value>
            <value>
                <fullName>Automatically</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>