force-app/main/default/objects/Visit/fields/cgcloud__Distribution_Issues__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribution Issue</label>
    <type>Checkbox</type>
</CustomField>