force-app/main/default/objects/Visit/fields/cgcloud__Duration_Effective__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Duration_Effective__c</fullName>
    <label>Duration Effective</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>