force-app/main/default/objects/Visit/fields/cgcloud__Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Duration_In_Minutes__c</fullName>
    <formula>( PlannedVisitEndTime - PlannedVisitStartTime)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration In Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>