force-app/main/default/objects/Visit/fields/cgcloud__Fixed_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fixed_Visit_Date__c</fullName>
    <label>Fixed Visit Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>