force-app/main/default/objects/Visit/fields/cgcloud__Is_Vst_Start_Osid_Range__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Vst_Start_Osid_Range__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the visit was started outside the allowed distance between GPS location and the store geolocation (true) or not (false).</description>
    <label>Visit Start Outside Range</label>
    <type>Checkbox</type>
</CustomField>