force-app/main/default/objects/Visit/fields/cgcloud__IsAllDayEvent__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__IsAllDayEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All-Day Event</label>
    <type>Checkbox</type>
</CustomField>