force-app/main/default/objects/Visit/fields/cgcloud__Location_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Location_Status__c</fullName>
    <label>Location Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GPS Inactive</fullName>
            </value>
            <value>
                <fullName>No GPS Fix</fullName>
            </value>
            <value>
                <fullName>Ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>