force-app/main/default/objects/Visit/fields/cgcloud__Number_Mock__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Number_Mock__c</fullName>
    <label>Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>