force-app/main/default/objects/Visit/fields/cgcloud__OOS_Issue__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__OOS_Issue__c</fullName>
    <description>Stores the information about OoS issue for calls relevant for KPI calculation.</description>
    <label>OoS Issue</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>