force-app/main/default/objects/Visit/fields/cgcloud__OOS_Rate_All__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__OOS_Rate_All__c</fullName>
    <description>Stores the information about OoS rate of all survey products for calls relevant for KPI calculation.</description>
    <label>OoS Rate All</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>