force-app/main/default/objects/Visit/fields/cgcloud__PSI__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__PSI__c</fullName>
    <description>Stores the result of the perfect store index determination.</description>
    <label>PSI</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>