force-app/main/default/objects/Visit/fields/cgcloud__PSQ_Rate__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__PSQ_Rate__c</fullName>
    <description>Stores the information about PSQ rate determined for calls relevant for KPI calculation.</description>
    <label>PSQ Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>