force-app/main/default/objects/Visit/fields/cgcloud__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Date__c</fullName>
    <description>helper field, do not need to show on page layout</description>
    <formula>DATEVALUE(PlannedVisitStartTime)</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>