force-app/main/default/objects/Visit/fields/cgcloud__Start_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Geolocation__c</fullName>
    <description>Business partner’s location coordinates at the start of a visit.</description>
    <inlineHelpText>Latitude (-90; 90)
      Longitude (-180; 180)</inlineHelpText>
    <label>Start Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>