force-app/main/default/objects/Visit/fields/cgcloud__Subject__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Subject__c</fullName>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>