force-app/main/default/objects/Visit/fields/cgcloud__Subject_Formula__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Subject_Formula__c</fullName>
    <description>Formula field based on subject text field</description>
    <formula>cgcloud__Subject__c</formula>
    <label>Subject</label>
    <type>Text</type>
</CustomField>