force-app/main/default/objects/Visit/fields/cgcloud__Tour__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tour</label>
    <referenceTo>cgcloud__Tour__c</referenceTo>
    <relationshipLabel>Tour Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>