force-app/main/default/objects/Visit/fields/cgcloud__Visit_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit_Planned_Date__c</fullName>
    <label>Visit Planned Date</label>
    <type>Date</type>
</CustomField>