force-app/main/default/objects/Visit/fields/cgcloud__Week__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Week__c</fullName>
    <label>Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>