force-app/main/default/objects/Visit/recordTypes/cgcloud__Read_Only.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Read_Only</fullName>
    <active>true</active>
    <label>Read Only</label>
</RecordType>