force-app/main/default/objects/Visit/recordTypes/HQ.recordType-meta.xml
<RecordType>
    <fullName>HQ</fullName>
    <active>true</active>
    <description>HQ</description>
    <label>HQ</label>
</RecordType>