force-app/main/default/objects/Visit/validationRules/cgcloud__Date_From_Has_To_Be_Before_Date_To.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Date_From_Has_To_Be_Before_Date_To</fullName>
    <active>true</active>
    <errorConditionFormula>PlannedVisitStartTime &gt; PlannedVisitEndTime</errorConditionFormula>
    <errorMessage>Start Date Time can&apos;t be later than End Date Time.</errorMessage>
</ValidationRule>