force-app/main/default/objects/Visit/listViews/All_Visit.listView-meta.xml
<ListView>
    <fullName>All_Visit</fullName>
    <columns>Name</columns>
    <columns>cgcloud__Responsible__c</columns>
    <columns>Status</columns>
    <columns>PlannedVisitStartTime</columns>
    <columns>PlannedVisitEndTime</columns>
    <columns>cgcloud__Completed_Date__c</columns>
    <columns>cgcloud__Subject__c</columns>
    <columns>cgcloud__Tour__c</columns>
    <columns>cgcloud__Start_Date__c</columns>
    <columns>SystemModstamp</columns>
    <columns>cgcloud__Update_Last_Modified_Date__c</columns>
    <columns>cgcloud__Visit_Template__c</columns>
    <columns>Account</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>